--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -80,8 +80,9 @@ clientLibraryVersionCheckAllowUnversioned=true
 # to service discovery health checks
 statusFilePath=
 
-# Version string (optional) used during deployments to minimize impact to bundles which get reassigned
-brokerVersionString=default
+# If true, (and ModularLoadManagerImpl is being used), the load manager will attempt to
+* use only brokers running the latest software version (to minimize impact to bundles)
+preferLaterVersions=false;
 
 ### --- Authentication --- ###
 
