Add ability to filter brokers based on their build version (#397)

--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -31,7 +31,6 @@
   <name>Pulsar Broker</name>
 
   <dependencies>
-
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
@@ -199,6 +198,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.github.zafarkhaja</groupId>
+      <artifactId>java-semver</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
@@ -266,5 +270,11 @@
         </executions>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
   </build>
 </project>
