--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -80,6 +80,10 @@ clientLibraryVersionCheckAllowUnversioned=true
 # to service discovery health checks
 statusFilePath=
 
+# If true, (and ModularLoadManagerImpl is being used), the load manager will attempt to
+* use only brokers running the latest software version (to minimize impact to bundles)
+preferLaterVersions=false;
+
 ### --- Authentication --- ###
 
 # Enable TLS
