Added ZooKeeper instrumentation for enhanced stats

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -23,6 +23,8 @@ pulsar.log.dir=logs
 pulsar.log.file=pulsar.log
 
 log4j.rootLogger=${pulsar.root.logger}
+log4j.logger.org.apache.zookeeper.server.ZooKeeperServer=WARN
+log4j.logger.org.apache.zookeeper.ZooKeeper=WARN
 
 # Example with rolling log file
 #log4j.rootLogger=DEBUG, CONSOLE, ROLLINGFILE
