--- a/all/pom.xml
+++ b/all/pom.xml
@@ -69,6 +69,12 @@
           <artifactId>netty-common</artifactId></exclusion>
       </exclusions>
     </dependency>
+    
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>pulsar-zookeeper</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
