--- a/all/pom.xml
+++ b/all/pom.xml
@@ -48,6 +48,12 @@
 
     <dependency>
       <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-proxy</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
       <artifactId>pulsar-client-tools</artifactId>
       <version>${project.version}</version>
     </dependency>
