--- a/kubernetes/google-container-engine/monitoring.yaml
+++ b/kubernetes/google-container-engine/monitoring.yaml
@@ -122,7 +122,7 @@ spec:
     clusterIP: None
     selector:
         app: pulsar
-        component: monitoring
+        component: prometheus
 
 
 ---
@@ -165,7 +165,7 @@ spec:
     clusterIP: None
     selector:
         app: pulsar
-        component: monitoring
+        component: grafana
 
 
 
