--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -95,6 +95,18 @@ maxUnackedMessagesPerBroker=0
 # limit/2 messages  
 maxUnackedMessagesPerSubscriptionOnBrokerBlocked=0.16
 
+# Max number of concurrent lookup request broker allows to throttle heavy incoming lookup traffic
+maxConcurrentLookupRequest=10000
+
+# Max number of concurrent topic loading request broker allows to control number of zk-operations
+maxConcurrentTopicLoadRequest=5000
+
+# Max concurrent non-persistent message can be processed per connection
+maxConcurrentNonPersistentMessagePerConnection=1000
+
+# Number of worker threads to serve non-persistent topic
+numWorkerThreadsForNonPersistentTopic=8
+
 ### --- Authentication --- ###
 
 # Enable authentication
