update shaded async-http-client property file with 2.0.31 version

--- a/pulsar-client/src/main/resources/ahc.properties
+++ b/pulsar-client/src/main/resources/ahc.properties
@@ -45,3 +45,4 @@ com.yahoo.pulsar.shade.org.asynchttpclient.keepEncodingHeader=false
 com.yahoo.pulsar.shade.org.asynchttpclient.shutdownQuietPeriod=2000
 com.yahoo.pulsar.shade.org.asynchttpclient.shutdownTimeout=15000
 com.yahoo.pulsar.shade.org.asynchttpclient.useNativeTransport=false
+com.yahoo.pulsar.shade.org.asynchttpclient.ioThreadsCount=0
