Fixed permissios and compilation on linux

--- a/pulsar-client-cpp/python/CMakeLists.txt
+++ b/pulsar-client-cpp/python/CMakeLists.txt
@@ -22,14 +22,10 @@ ADD_LIBRARY(_pulsar SHARED src/pulsar.cc src/producer.cc src/consumer.cc
 SET(CMAKE_SHARED_LIBRARY_PREFIX )
 SET(CMAKE_SHARED_LIBRARY_SUFFIX .so)
 
-set (CMAKE_SHARED_LINKER_FLAGS " -static -undefined dynamic_lookup ")
+set (CMAKE_SHARED_LINKER_FLAGS " -static")
 
-if (APPLE)
-    set_target_properties(_pulsar PROPERTIES
-                LINK_FLAGS "-Wl,-all_load")
-else ()
-    set_target_properties(_pulsar PROPERTIES
-        LINK_FLAGS "-Wl,--whole-archive")
-endif ()
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  set(CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS "${CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS} -undefined dynamic_lookup")
+endif()
 
-TARGET_LINK_LIBRARIES(_pulsar ${Boost_LIBRARIES} ${CLIENT_LIBS})
+TARGET_LINK_LIBRARIES(_pulsar ${CLIENT_LIBS})
