Make broker configurable to own non-persistent namespace

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -81,6 +81,25 @@ maxUnackedMessagesPerConsumer=50000
 # check and dispatcher can dispatch messages without any restriction
 maxUnackedMessagesPerSubscription=200000
 
+# Max number of concurrent lookup request broker allows to throttle heavy incoming lookup traffic
+maxConcurrentLookupRequest=10000
+
+# Max number of concurrent topic loading request broker allows to control number of zk-operations
+maxConcurrentTopicLoadRequest=5000
+
+# Max concurrent non-persistent message can be processed per connection
+maxConcurrentNonPersistentMessagePerConnection=1000
+
+# Number of worker threads to serve non-persistent topic 
+numWorkerThreadsForNonPersistentTopic=8
+
+# Allow broker to own non-persistent namespaces along with persistent topics
+nonPersistentNamespaceAllowed=true
+
+# Broker is only allowed to own non-persistent topic. It helps to isolate broker which only serves non-persistent
+# topics and does not impact performance of persistent topics
+onlyNonPersistentNamespaceAllowed=false
+
 ### --- Authentication --- ###
 
 # Enable authentication
