Improved docs with Message and compile fix

--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -74,8 +74,15 @@ include_directories(
 )
 
 set(COMMON_LIBS
-  ${COMMON_LIBS}
-  ${Boost_LIBRARIES}
+  ${COMMON_LIBS} -lpthread -lm
+  ${Boost_PROGRAM_OPTIONS_LIBRARY}
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_REGEX_LIBRARY}
+  ${Boost_THREAD_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_CHRONO_LIBRARY}
+  ${Boost_DATE_TIME_LIBRARY}
+  ${Boost_ATOMIC_LIBRARY}
   ${OPENSSL_LIBRARIES}
   ${ZLIB_LIBRARIES}
   ${PROTOBUF_LIBRARIES}
