--- a/pulsar-client-cpp/python/CMakeLists.txt
+++ b/pulsar-client-cpp/python/CMakeLists.txt
@@ -28,4 +28,4 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   set(CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS "${CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS} -undefined dynamic_lookup")
 endif()
 
-TARGET_LINK_LIBRARIES(_pulsar ${CLIENT_LIBS})
+TARGET_LINK_LIBRARIES(_pulsar ${CLIENT_LIBS} ${Boost_PYTHON_LIBRARY})
