--- a/all/pom.xml
+++ b/all/pom.xml
@@ -69,7 +69,12 @@
           <artifactId>netty-common</artifactId></exclusion>
       </exclusions>
     </dependency>
-    
+
+    <dependency>
+      <groupId>org.apache.bookkeeper.stats</groupId>
+      <artifactId>prometheus-metrics-provider</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>pulsar-zookeeper</artifactId>
