--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@ flexible messaging model and an intuitive client API.</description>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <bookkeeper.version>4.3.1.60-yahoo</bookkeeper.version>
+    <bookkeeper.version>4.3.1.68-yahoo</bookkeeper.version>
     <zookeeper.version>3.4.10</zookeeper.version>
     <netty.version>4.0.46.Final</netty.version>
     <storm.version>0.9.5</storm.version>
@@ -194,6 +194,12 @@ flexible messaging model and an intuitive client API.</description>
       <dependency>
         <groupId>org.apache.bookkeeper.stats</groupId>
         <artifactId>datasketches-metrics-provider</artifactId>
+        <version>${bookkeeper.version}</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.apache.bookkeeper.stats</groupId>
+        <artifactId>prometheus-metrics-provider</artifactId>
         <version>${bookkeeper.version}</version>
       </dependency>
 
