Add zk-stats instrumentation to get zk-client stats

--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,13 @@ flexible messaging model and an intuitive client API.</description>
         <artifactId>aspectjweaver</artifactId>
         <version>${aspectj.version}</version>
       </dependency>
+      
+	  <!-- TODO: should we callout BSD license: https://github.com/electronicarts/ea-agent-loader -->
+      <dependency>
+        <groupId>com.ea.agentloader</groupId>
+        <artifactId>ea-agent-loader</artifactId>
+        <version>1.0.2</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
