--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,9 @@ install:
   - sudo bash -x $TRAVIS_BUILD_DIR/pulsar-client-cpp/travis-build.sh $HOME/pulsar-dep $TRAVIS_BUILD_DIR dep
 
 script:
-    # Java build
-    - mvn license:check test
-
-    # C++ build
-    - sudo bash -x $TRAVIS_BUILD_DIR/pulsar-client-cpp/travis-build.sh $HOME/pulsar-dep $TRAVIS_BUILD_DIR compile
+    # Build Java and C++
+    - mvn license:check test && \
+      sudo bash -x $TRAVIS_BUILD_DIR/pulsar-client-cpp/travis-build.sh $HOME/pulsar-dep $TRAVIS_BUILD_DIR compile
 
 deploy:
   -
