add wagon-ssh-external extension

--- a/pom.xml
+++ b/pom.xml
@@ -684,6 +684,13 @@ flexible messaging model and an intuitive client API.</description>
         </plugin>
       </plugins>
     </pluginManagement>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-ssh-external</artifactId>
+        <version>2.10</version>
+      </extension>
+    </extensions>
   </build>
 
   <profiles>
