--- a/conf/websocket.conf
+++ b/conf/websocket.conf
@@ -39,6 +39,12 @@ bindAddress=0.0.0.0
 # Name of the pulsar cluster to connect to
 clusterName=
 
+# Number of IO threads in Pulsar Client used in WebSocket proxy
+numIoThreads=8
+
+# Number of connections per Broker in Pulsar Client used in WebSocket proxy
+connectionsPerBroker=8
+
 ### --- Authentication --- ###
 
 # Enable authentication
