--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -34,9 +34,6 @@ webServicePort=8080
 # Port to use to server HTTPS request
 webServicePortTls=8443
 
-# Enable the WebSocket API service in broker
-webSocketServiceEnabled=false
-
 # Hostname or IP address the service binds on, default is 0.0.0.0.
 bindAddress=0.0.0.0
 
@@ -320,3 +317,14 @@ brokerServicePurgeInactiveFrequencyInSeconds=60
 
 # Name of load manager to use
 loadManagerClassName=com.yahoo.pulsar.broker.loadbalance.impl.SimpleLoadManagerImpl
+
+### --- WebSocket --- ###
+
+# Enable the WebSocket API service in broker
+webSocketServiceEnabled=false
+
+# Number of IO threads in Pulsar Client used in WebSocket proxy
+webSocketNumIoThreads=8
+
+# Number of connections per Broker in Pulsar Client used in WebSocket proxy
+webSocketConnectionsPerBroker=8
