fix remaining baseurl issues

--- a/site/_data/sidebar-ja.yaml
+++ b/site/_data/sidebar-ja.yaml
@@ -10,5 +10,5 @@ groups:
   - title: クラスタのセットアップ
     endpoint: ClusterSetup
   - title: adminツールとAPI
-    endpoint: AdminInterface
+    endpoint: AdminTools
 # TODO
