Renamed java package names in scripts and documentation

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -319,7 +319,7 @@ keepAliveIntervalSeconds=30
 brokerServicePurgeInactiveFrequencyInSeconds=60
 
 # Name of load manager to use
-loadManagerClassName=com.yahoo.pulsar.broker.loadbalance.impl.SimpleLoadManagerImpl
+loadManagerClassName=org.apache.pulsar.broker.loadbalance.impl.SimpleLoadManagerImpl
 
 ### --- WebSocket --- ###
 
