--- a/pulsar-broker/src/test/resources/configurations/pulsar_broker_test.conf
+++ b/pulsar-broker/src/test/resources/configurations/pulsar_broker_test.conf
@@ -26,7 +26,7 @@ tlsAllowInsecureConnection=false
 authenticationEnabled=false
 authorizationEnabled=false
 superUserRoles="test_user"
-brokerClientAuthenticationPlugin="com.yahoo.pulsar.client.impl.auth.AuthenticationDisabled"
+brokerClientAuthenticationPlugin="org.apache.pulsar.client.impl.auth.AuthenticationDisabled"
 brokerClientAuthenticationParameters=
 bookkeeperClientAuthenticationPlugin="test_auth_plugin"
 bookkeeperClientAuthenticationAppId="test_auth_id"
