--- a/pulsar-client-cpp/tests/client.conf
+++ b/pulsar-client-cpp/tests/client.conf
@@ -23,5 +23,5 @@ brokerServiceUrl=pulsar+ssl://localhost:9886/
 useTls=true
 tlsAllowInsecureConnection=true
 tlsTrustCertsFilePath=./pulsar-broker/src/test/resources/authentication/tls/cacert.pem
-authPlugin=com.yahoo.pulsar.client.impl.auth.AuthenticationTls
+authPlugin=org.apache.pulsar.client.impl.auth.AuthenticationTls
 authParams=tlsCertFile:./pulsar-broker/src/test/resources/authentication/tls/client-cert.pem,tlsKeyFile:./pulsar-broker/src/test/resources/authentication/tls/client-key.pem
