--- a/managed-ledger/pom.xml
+++ b/managed-ledger/pom.xml
@@ -23,7 +23,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.yahoo.pulsar</groupId>
+    <groupId>org.apache.pulsar</groupId>
     <artifactId>pulsar</artifactId>
     <version>1.19-SNAPSHOT</version>
     <relativePath>..</relativePath>
@@ -39,7 +39,7 @@
     </dependency>
     
     <dependency>
-      <groupId>com.yahoo.pulsar</groupId>
+      <groupId>org.apache.pulsar</groupId>
       <artifactId>pulsar-common</artifactId>
       <version>${project.version}</version>
     </dependency>
