--- a/pulsar-client/pom.xml
+++ b/pulsar-client/pom.xml
@@ -23,7 +23,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.yahoo.pulsar</groupId>
+    <groupId>org.apache.pulsar</groupId>
     <artifactId>pulsar</artifactId>
     <version>1.19-SNAPSHOT</version>
     <relativePath>..</relativePath>
@@ -126,8 +126,8 @@
                   <include>com.fasterxml.jackson.core</include>
                   <include>io.netty:netty</include>
                   <include>io.netty:netty-all</include>
-                  <include>com.yahoo.pulsar:pulsar-common</include>
-                  <include>com.yahoo.pulsar:pulsar-checksum</include>
+                  <include>org.apache.pulsar:pulsar-common</include>
+                  <include>org.apache.pulsar:pulsar-checksum</include>
                   <include>net.jpountz.lz4:lz4</include>
                   <include>com.yahoo.datasketches:sketches-core</include>
                 </includes>
