--- a/pulsar-common/pom.xml
+++ b/pulsar-common/pom.xml
@@ -24,7 +24,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.yahoo.pulsar</groupId>
+    <groupId>org.apache.pulsar</groupId>
     <artifactId>pulsar</artifactId>
     <version>1.19-SNAPSHOT</version>
     <relativePath>..</relativePath>
@@ -66,7 +66,7 @@
     </dependency>
     
     <dependency>
-      <groupId>com.yahoo.pulsar</groupId>
+      <groupId>org.apache.pulsar</groupId>
       <artifactId>pulsar-checksum</artifactId>
       <version>${project.version}</version>
     </dependency>
