--- a/pulsar-testclient/pom.xml
+++ b/pulsar-testclient/pom.xml
@@ -23,7 +23,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.yahoo.pulsar</groupId>
+		<groupId>org.apache.pulsar</groupId>
 		<artifactId>pulsar</artifactId>
 		<version>1.19-SNAPSHOT</version>
 		<relativePath>..</relativePath>
