Add athenz authentication plugin

--- a/pulsar-client-cpp/lib/auth/CMakeLists.txt
+++ b/pulsar-client-cpp/lib/auth/CMakeLists.txt
@@ -20,3 +20,6 @@
 add_library(authTls MODULE AuthTls.cc)
 target_link_libraries(authTls ${CLIENT_LIBS})
 set_target_properties(authTls PROPERTIES OUTPUT_NAME authtls)
+add_library(authAthenz MODULE AuthAthenz.cc)
+target_link_libraries(authAthenz ${CLIENT_LIBS})
+set_target_properties(authAthenz PROPERTIES OUTPUT_NAME authathenz)
