Make broker configurable to own non-persistent topic

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -118,6 +118,12 @@ maxConcurrentNonPersistentMessagePerConnection=1000
 # Number of worker threads to serve non-persistent topic
 numWorkerThreadsForNonPersistentTopic=8
 
+# Enable broker to load persistent topics
+enablePersistentTopics=true
+
+# Enable broker to load non-persistent topics
+enableNonPersistentTopics=true
+
 ### --- Authentication --- ###
 
 # Enable TLS
