Fixed authorizationAllowWildcardsMatching explanation

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -106,7 +106,7 @@ authenticationProviders=false
 # Enforce authorization
 authorizationEnabled=false
 
-# Actions that can be authorized by using permitted role name which contains wildcard
+# Allow wildcard matching in authorization
 # e.g. pulsar.service.*
 authorizationAllowWildcardsMatching=false
 
