--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -140,7 +140,7 @@ authenticationProviders=
 # Enforce authorization
 authorizationEnabled=false
 
-# Actions that can be authorized by using permitted role name which contains wildcard
+# Allow wildcard matching in authorization
 # e.g. pulsar.service.*
 authorizationAllowWildcardsMatching=false
 
