changes to pulsar-daemon CLI tool docs

--- a/site/_data/cli/pulsar-daemon.yaml
+++ b/site/_data/cli/pulsar-daemon.yaml
@@ -1,4 +1,7 @@
-description: A wrapper around the [`pulsar`](#pulsar) tool that's used to start and stop processes, such as ZooKeeper, bookies, and Pulsar brokers, in the background using [nohup](https://en.wikipedia.org/wiki/Nohup). `pulsar-daemon` has a similar interface to the `pulsar` command but adds `start` and `stop` commands for various services.
+description: |
+  A wrapper around the [`pulsar`](#pulsar) tool that's used to start and stop processes, such as ZooKeeper, bookies, and Pulsar brokers, in the background using [nohup](https://en.wikipedia.org/wiki/Nohup).
+  
+  `pulsar-daemon` has a similar interface to the `pulsar` command but adds `start` and `stop` commands for various services. For a listing of those services, run `pulsar-daemon` to see the help output or see the documentation for the [`pulsar`](#pulsar) command.
 commands:
 - name: start
   description: Start a service in the background using nohup.
@@ -8,3 +11,5 @@ commands:
   argument: service
   options:
   - flags: -force
+    description: Stop the service forcefully if not stopped by normal shutdown.
+    default: "false"
