make protobuf doc generation static

--- a/site/Makefile
+++ b/site/Makefile
@@ -11,8 +11,7 @@ deep_clean:
 		node_modules \
 		vendor \
 		_data/config \
-		_data/admin-rest-api-swagger.json \
-		protobuf.json
+		_data/admin-rest-api-swagger.json
 
 doxygen_install:
 	rm -rf scripts/doxygen
@@ -35,7 +34,7 @@ ruby_setup:
 python_setup:
 	pip install pdoc pygments
 
-setup: ruby_setup protobuf_setup doxygen_install python_setup
+setup: ruby_setup doxygen_install python_setup
 
 build: api_docs
 	scripts/build-all-versions.sh
@@ -65,6 +64,6 @@ protobuf_setup:
 	mv protoc-gen-doc scripts
 	(cd scripts/protoc-gen-doc && PROTOBUF_PREFIX=$(shell brew --prefix protobuf) qmake && make)
 
-api_docs: javadoc protobuf_doc_gen python_doc_gen cpp_doc_gen
+api_docs: javadoc python_doc_gen cpp_doc_gen
 
-publish: deep_clean setup protobuf_doc_gen swagger_definition_gen build
+publish: deep_clean setup swagger_definition_gen build
