revert pulsar java code to 1.18

--- a/site/Makefile
+++ b/site/Makefile
@@ -36,6 +36,10 @@ python_setup:
 
 setup: ruby_setup doxygen_install python_setup
 
+travis_setup: ruby_setup
+
+travis_publish: deep_clean setup build
+
 build: api_docs
 	scripts/build-all-versions.sh
 
