--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
 
 install:
   - sudo bash -x $TRAVIS_BUILD_DIR/pulsar-client-cpp/travis-build.sh $HOME/pulsar-dep $TRAVIS_BUILD_DIR dep
-  - (cd site && make setup)
+  - (cd site && make travis_setup)
 
 script:
     # Build Java and C++
@@ -54,4 +54,4 @@ deploy:
   -
     provider: script
     skip_cleanup: true
-    script: (cd site && make build)
+    script: (cd site && make travis_build)
