Fixes for NOTICE and LICENSE files for src and bin distribution

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -105,7 +105,7 @@
             </goals>
             <configuration>
               <tarLongFileMode>posix</tarLongFileMode>
-              <finalName>pulsar-${project.version}</finalName>
+              <finalName>apache-pulsar-${project.version}</finalName>
               <descriptors>
                 <descriptor>src/assemble/bin.xml</descriptor>
                 <descriptor>src/assemble/src.xml</descriptor>
