remove swagger generation script

--- a/site/Makefile
+++ b/site/Makefile
@@ -58,8 +58,8 @@ javadoc:
 python_doc_gen:
 	scripts/python-doc-gen.sh
 
-swagger_definition_gen:
-	scripts/swagger-definition-gen.sh
+swagger_definition_copy:
+	(cd $(shell git rev-parse --show-toplevel) && cp pulsar-broker/target/docs/swagger.json site/_data/admin-rest-api-swagger.json)
 
 protobuf_doc_gen:
 	scripts/protobuf-doc-gen.sh
@@ -73,4 +73,4 @@ protobuf_setup:
 
 api_docs: javadoc python_doc_gen cpp_doc_gen
 
-publish: deep_clean setup swagger_definition_gen build
+publish: deep_clean setup swagger_definition_copy build
