Add zk-stats instrumentation to get zk-client stats (#507)
* Add zk-stats instrumentation to get zk-client stats

* fix: listenerTypo + add timeUnit

* Add Prometheus for dimension metrics instead histogram

* caching string variable

* remove pom: todo

* Fix: duplicate summary registration for unit-test

--- a/pom.xml
+++ b/pom.xml
@@ -480,6 +480,12 @@ flexible messaging model and an intuitive client API.</description>
         <artifactId>aspectjweaver</artifactId>
         <version>${aspectj.version}</version>
       </dependency>
+      
+      <dependency>
+        <groupId>com.ea.agentloader</groupId>
+        <artifactId>ea-agent-loader</artifactId>
+        <version>1.0.2</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
